--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^4.2.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "jquery.maskedinput": "^1.4.1",
     "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.14.1",
     "pug": "^3.0.0",
